# codehunter

./: .codehunterignore  Cargo.toml  README.md  signatures.txt
src/: cli.rs  compression.rs  encoding.rs  main.rs  pattern.rs  scanner.rs
src/output/: csv.rs  html.rs  json.rs  mod.rs  text.rs
