[package]
name = "codehunter"
version = "1.0.0"
edition = "2021"
authors = ["Security Team"]
description = "High-performance malware signature scanner for code files"
license = "Apache-2.0"
readme = "README.md"
keywords = ["security", "malware", "scanner", "regex", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive", "env", "unicode", "wrap_help"] }

# Regex Engine (schnell!)
regex = "1.10"

# Parallelisierung
rayon = "1.8"

# Dateisystem
walkdir = "2.4"
globset = "0.4"
ignore = "0.4"

# Serialisierung
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV Output
csv = "1.3"

# Progress Bar
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"

# Encoding Detection
encoding_rs = "0.8"
chardetng = "0.1"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Memory Mapping für große Dateien
memmap2 = "0.9"

# Compression (gz, zip, etc.)
flate2 = "1.0"

# Zeitstempel
chrono = { version = "0.4", features = ["serde"] }

# HTML Template
askama = "0.12"

# Farbige Terminal-Ausgabe
colored = "2.1"

# Byte-Größen formatieren
bytesize = "1.3"

# Num CPUs für optimale Parallelisierung
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
